--- a/public/styles.css
+++ b/public/styles.css
@@ -136,6 +136,38 @@ input[type="submit"]:hover {
     opacity: 0.9;
 }
 
+#cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px;
+  padding-bottom: 40px;
+}
+
+#destinos {
+  text-align: center;
+}
+
+#destinos h2 {
+  margin-bottom: 30px;
+}
+
+.card {
+  background: rgb(245, 233, 215);
+  border-radius: 10px;
+  padding: 15px;
+  margin: 10px;
+  max-width: 250px;
+  text-align: center;
+  border: 2px solid rgb(245, 130, 32);
+}
+
+.card img {
+  width: 100%;
+  border-radius: 8px;
+}
+
 .footer {
     background-color: rgb(245, 233, 215);
     text-align: center;
